@@ -69,3 +69,8 @@ memory.limit <- function() .Internal(memory.size(NA))
 
 DLL.version <- function(path) .Internal(DLL.version(path))
 
+Sys.timezone <- function()
+{
+    z <- as.POSIXlt(Sys.time())
+    attr(z, "tzone")[2 + z$isdst]
+}
